--- a/package.json
+++ b/package.json
@@ -5,7 +5,11 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "node --watch --experimental-strip-types server.ts"
+    "dev": "node --watch --experimental-strip-types server.ts",
+    "docker": "docker-compose up -d",
+    "db:generate": "drizzle-kit generate",
+    "db:migrate": "drizzle-kit migrate",
+    "db:studio": "drizzle-kit studio"
   },
   "keywords": [],
   "author": "",
@@ -13,10 +17,13 @@
   "type": "module",
   "devDependencies": {
     "@types/node": "^25.2.1",
+    "drizzle-kit": "^0.31.8",
     "typescript": "^5.9.3"
   },
   "dependencies": {
+    "drizzle-orm": "^0.45.1",
     "fastify": "^5.7.4",
+    "pg": "^8.18.0",
     "pino-pretty": "^13.1.3"
   }
 }
