--- a/package.json
+++ b/package.json
@@ -21,9 +21,13 @@
     "typescript": "^5.9.3"
   },
   "dependencies": {
+    "@fastify/swagger": "^9.7.0",
+    "@fastify/swagger-ui": "^5.2.5",
     "drizzle-orm": "^0.45.1",
     "fastify": "^5.7.4",
+    "fastify-type-provider-zod": "^6.1.0",
     "pg": "^8.18.0",
-    "pino-pretty": "^13.1.3"
+    "pino-pretty": "^13.1.3",
+    "zod": "^4.3.6"
   }
 }
