--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "node --env-file .env --watch server.ts",
     "docker": "docker-compose up -d",
+    "db:seed": "node --env-file .env src/database/seed.ts",
     "db:generate": "drizzle-kit generate",
     "db:migrate": "drizzle-kit migrate",
     "db:studio": "drizzle-kit studio"
@@ -16,6 +17,7 @@
   "license": "ISC",
   "type": "module",
   "devDependencies": {
+    "@faker-js/faker": "^10.3.0",
     "@types/node": "^25.2.1",
     "drizzle-kit": "^0.31.8",
     "typescript": "^5.9.3"
