--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,2 @@
 NODE_ENV=development
-DATABASE_URL=postgres://postgres:postgres@localhost:5433/desafio_node_rocketseat
+DATABASE_URL="postgres://postgres:postgres@localhost:5433/desafio_node_rocketseat"
