--- a/package.json
+++ b/package.json
@@ -4,13 +4,14 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "node --env-file .env --watch server.ts",
+    "dev": "node --env-file .env --watch src/server.ts",
     "docker": "docker-compose up -d",
     "db:seed": "node --env-file .env src/database/seed.ts",
     "db:generate": "drizzle-kit generate",
     "db:migrate": "drizzle-kit migrate",
-    "db:studio": "drizzle-kit studio"
+    "pretest": "dotenv -e .env.test drizzle-kit migrate",
+    "db:studio": "drizzle-kit studio",
+    "test": "dotenv -e .env.test vitest run --coverage"
   },
   "keywords": [],
   "author": "",
@@ -19,13 +20,19 @@
   "devDependencies": {
     "@faker-js/faker": "^10.3.0",
     "@types/node": "^25.2.1",
+    "@types/supertest": "^6.0.3",
+    "@vitest/coverage-istanbul": "^4.0.18",
+    "dotenv-cli": "^11.0.0",
     "drizzle-kit": "^0.31.8",
-    "typescript": "^5.9.3"
+    "supertest": "^7.2.2",
+    "typescript": "^5.9.3",
+    "vitest": "^4.0.18"
   },
   "dependencies": {
     "@fastify/swagger": "^9.7.0",
     "@fastify/swagger-ui": "^5.2.5",
     "@scalar/fastify-api-reference": "^1.44.15",
+    "@vitest/coverage-v8": "^4.0.18",
     "drizzle-orm": "^0.45.1",
     "fastify": "^5.7.4",
     "fastify-type-provider-zod": "^6.1.0",
