--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "type": "module",
   "devDependencies": {
     "@faker-js/faker": "^10.3.0",
+    "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^25.2.1",
     "@types/supertest": "^6.0.3",
     "@vitest/coverage-istanbul": "^4.0.18",
@@ -37,6 +38,7 @@
     "drizzle-orm": "^0.45.1",
     "fastify": "^5.7.4",
     "fastify-type-provider-zod": "^6.1.0",
+    "jsonwebtoken": "^9.0.3",
     "pg": "^8.18.0",
     "pino-pretty": "^13.1.3",
     "zod": "^4.3.6"
