--- a/.env.test
+++ b/.env.test
@@ -1,2 +1,3 @@
 NODE_ENV=test
 DATABASE_URL="postgresql://postgres:postgres@localhost:5433/desafio_node_rocketseat_test"
+JWT_SECRET="your_jwt_secret_key"
